--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -38,6 +38,8 @@
     brace-style:
       - "error"
       - "1tbs"
+      -
+        allowSingleLine: true
     callback-return: "error"
     camelcase: "error"
     capitalized-comments: "off"
@@ -109,7 +111,7 @@
     max-nested-callbacks: "error"
     max-params: ["error", 4]
     max-statements: "off"
-    max-statements-per-line: "error"
+    max-statements-per-line: "off"
     multiline-ternary: "off"
     new-cap: "error"
     new-parens: "error"
@@ -233,7 +235,7 @@
     prefer-reflect: "off"
     prefer-rest-params: "error"
     prefer-spread: "error"
-    prefer-template: "error"
+    prefer-template: "off"
     quote-props: "off"
     quotes:
       - "error"
