Add a bunch more goodies

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -172,7 +172,7 @@
     no-process-env: "off"
     no-process-exit: "error"
     no-proto: "error"
-    no-prototype-builtins: "error"
+    no-prototype-builtins: "off"
     no-restricted-globals: "error"
     no-restricted-imports: "error"
     no-restricted-modules: "error"
@@ -231,7 +231,7 @@
     prefer-const: "error"
     prefer-destructuring: "error"
     prefer-numeric-literals: "error"
-    prefer-promise-reject-errors: "error"
+    prefer-promise-reject-errors: "off"
     prefer-reflect: "off"
     prefer-rest-params: "error"
     prefer-spread: "error"
